odevzdani/tests/invalid_sem/com/com09.java
class Main {
    static void run() {
        int b = 1e-2;
    }
}
